Redesigned email contact and admin emails

--- a/templates/administration/email_template/admin_email.html
+++ b/templates/administration/email_template/admin_email.html
@@ -1,274 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-    <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <style type="text/css">
-        /* CLIENT-SPECIFIC STYLES */
-        body, table, td, a {
-            -webkit-text-size-adjust: 100%;
-            -ms-text-size-adjust: 100%;
-        }
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="x-apple-disable-message-reformatting">
+    <title>Admin Notification</title>
 
-        table, td {
-            mso-table-lspace: 0pt;
-            mso-table-rspace: 0pt;
-        }
+    <style>
+        /* RESET */
+        html, body { margin: 0 auto !important; padding: 0 !important; height: 100% !important; width: 100% !important; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; background-color: #e5e7eb; }
+        * { -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
+        table, td { mso-table-lspace: 0pt !important; mso-table-rspace: 0pt !important; border-collapse: collapse !important; }
+        img { -ms-interpolation-mode:bicubic; }
 
-        img {
-            -ms-interpolation-mode: bicubic;
-        }
+        /* UTILS */
+        .mono { font-family: 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', monospace; }
 
-        /* RESET STYLES */
-        img {
-            border: 0;
-            height: auto;
-            line-height: 100%;
-            outline: none;
-            text-decoration: none;
-        }
+        /* BUTTON HOVER */
+        .btn-hover:hover { background-color: #155e75 !important; }
 
-        table {
-            border-collapse: collapse !important;
-        }
-
-        body {
-            height: 100% !important;
-            margin: 0 !important;
-            padding: 0 !important;
-            width: 100% !important;
-        }
-
-        /* iOS BLUE LINKS */
-        a[x-apple-data-detectors] {
-            color: inherit !important;
-            text-decoration: none !important;
-            font-size: inherit !important;
-            font-family: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-        }
-
-        /* MEDIA QUERIES */
-        @media screen and (max-width: 480px) {
-            .mobile-hide {
-                display: none !important;
-            }
-
-            .mobile-center {
-                text-align: center !important;
-            }
-        }
-
-        /* ANDROID CENTER FIX */
-        div[style*="margin: 16px 0;"] {
-            margin: 0 !important;
+        @media only screen and (max-width: 600px) {
+            .email-container { width: 100% !important; max-width: 100% !important; }
+            .content-padding { padding: 20px !important; }
         }
     </style>
 </head>
-<body style="margin: 0 !important; padding: 0 !important; background-color: #eeeeee;" bgcolor="#eeeeee">
 
-<!-- HIDDEN PREHEADER TEXT -->
-<div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Open Sans, Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    {{ subject }}
-</div>
+<body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #e5e7eb;">
+    <center style="width: 100%; background-color: #e5e7eb;">
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-    <tr>
-        <td align="center" style="background-color: #eeeeee;" bgcolor="#eeeeee">
-            <!--[if (gte mso 9)|(IE)]>
-            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+        <div style="display: none; font-size: 1px; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
+            System Alert: {{ subject }} - {{ message|truncatewords:8 }}
+        </div>
+
+        <div style="max-width: 600px; margin: 0 auto;" class="email-container">
+
+            <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                 <tr>
-                    <td align="center" valign="top" width="600">
-            <![endif]-->
-            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
+                    <td height="40">&nbsp;</td>
+                </tr>
+            </table>
+
+            <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #ffffff; border-radius: 6px; border: 1px solid #d1d5db; overflow: hidden; box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);">
+
                 <tr>
-                    <td align="center" valign="top" style="font-size:0; padding: 35px;" bgcolor="#044767">
-                        <!--[if (gte mso 9)|(IE)]>
-                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+                    <td height="6" style="background-color: #0891b2; font-size: 6px; line-height: 6px;">&nbsp;</td>
+                </tr>
+
+                <tr>
+                    <td class="content-padding" style="padding: 30px 40px 20px 40px; border-bottom: 1px solid #f3f4f6;">
+                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
-                                <td align="left" valign="top" width="300">
-                        <![endif]-->
-                        <div style="display:inline-block; max-width:50%; min-width:100px; vertical-align:top; width:100%;">
-                            <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%"
-                                   style="max-width:300px;">
-                                <tr>
-                                    <td align="center" valign="top"
-                                        style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; line-height: 48px;"
-                                        class="mobile-center">
-                                        <a href="https://tchiiz.com" target="_blank">
-                                            <img alt="Logo" src="https://tchiiz.com/logo"
-                                                 style="display: block;
-                                                    width: 100px;
-                                                    max-width: 100px;
-                                                    min-width: 40px;
-                                                    font-family: 'Lato', Helvetica, Arial, sans-serif;
-                                                    color: #ffffff; font-size: 18px;"
-                                                 border="0">
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
+                                <td width="50" valign="middle">
+                                    <img src="https://img.icons8.com/ios-filled/50/0891b2/console.png" width="32" height="32" alt="System" style="display: block; border: 0;">
+                                </td>
+                                <td valign="middle">
+                                    <p class="mono" style="margin: 0; font-size: 12px; color: #6b7280; text-transform: uppercase; letter-spacing: 1px;">Admin Notification</p>
+                                    <h1 style="margin: 5px 0 0 0; font-size: 20px; font-weight: 700; color: #111827;">{{ subject }}</h1>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="content-padding" style="padding: 30px 40px;">
+
+                        <div style="background-color: #f8fafc; border: 1px solid #e2e8f0; border-radius: 4px; padding: 20px;">
+                            <p class="mono" style="margin: 0 0 10px 0; font-size: 11px; color: #9ca3af;">TIMESTAMP: {% now "Y-m-d H:i:s" %}</p>
+                            <p style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 24px; color: #374151;">
+                                {{ message|linebreaksbr }}
+                            </p>
                         </div>
-                        <!--[if (gte mso 9)|(IE)]>
-                        </td>
-                        </tr>
-                        </table>
-                        <![endif]-->
+
                     </td>
                 </tr>
+
                 <tr>
-                    <td align="center" style="padding: 35px 35px 20px 35px; background-color: #ffffff;"
-                        bgcolor="#ffffff">
-                        <!--[if (gte mso 9)|(IE)]>
-                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+                    <td class="content-padding" style="padding: 0 40px 40px 40px;">
+                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
-                                <td align="center" valign="top" width="600">
-                        <![endif]-->
-                        <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
-                               style="max-width:600px;">
-                            <tr>
-                                <td align="center"
-                                    style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
-                                    <img src="https://litmus-builder.s3.amazonaws.com/8cd68d09-3d9e-45d3-9cd2-f8f4969d69bd"
-                                         width="125" height="120" style="display: block; border: 0px;"/><br>
-                                    <h2 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;">
-                                        {{ subject }}
-                                    </h2>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="left"
-                                    style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
-                                    <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;">
-                                        {{ message }}
-                                        <br>
-                                    </p>
+                                <td align="left">
+                                    <a href="{{ dashboard_url }}" target="_blank" class="btn-hover" style="display: inline-block; background-color: #0e7490; color: #ffffff; font-family: sans-serif; font-size: 14px; font-weight: 600; text-decoration: none; padding: 12px 24px; border-radius: 4px;">
+                                        Open Dashboard &rarr;
+                                    </a>
                                 </td>
                             </tr>
                         </table>
-                        <!--[if (gte mso 9)|(IE)]>
-                        </td>
-                        </tr>
-                        </table>
-                        <![endif]-->
                     </td>
                 </tr>
+
+            </table>
+
+            <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                 <tr>
-                    <td align="center" style=" padding: 35px; background-color: #1b9ba3;" bgcolor="#1b9ba3">
-                        <!--[if (gte mso 9)|(IE)]>
-                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
-                            <tr>
-                                <td align="center" valign="top" width="600">
-                        <![endif]-->
-                        <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
-                               style="max-width:600px;">
-                            <tr>
-                                <td align="center"
-                                    style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
-                                    <h2 style="font-size: 24px; font-weight: 800; line-height: 30px; color: #ffffff; margin: 0;">
-                                        See it on the website.
-                                    </h2>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="center" style="padding: 25px 0 15px 0;">
-                                    <table border="0" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td align="center" style="border-radius: 5px;" bgcolor="#66b3b7">
-                                                <a href="https://tchiiz.com/administration/" target="_blank"
-                                                   style="font-size: 18px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: #66b3b7; padding: 15px 30px; border: 1px solid #66b3b7; display: block;">Awesome</a>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                        <!--[if (gte mso 9)|(IE)]>
-                        </td>
-                        </tr>
-                        </table>
-                        <![endif]-->
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" style="padding: 35px; background-color: #ffffff;" bgcolor="#ffffff">
-                        <!--[if (gte mso 9)|(IE)]>
-                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
-                            <tr>
-                                <td align="center" valign="top" width="600">
-                        <![endif]-->
-                        <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
-                               style="max-width:600px;">
-                            <tr>
-                                <td align="center">
-                                    <img src="https://tchiiz.com/logo-mini/" width="37" height="37"
-                                         style="display: block; border: 1px solid black;"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="center"
-                                    style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; padding: 5px 0 10px 0;">
-                                    <p style="font-size: 14px; font-weight: 800; line-height: 18px; color: #333333;">
-                                        USA, Florida FL
-                                    </p>
-                                </td>
-                            </tr>
-                        </table>
-                        <!--[if (gte mso 9)|(IE)]>
-                        </td>
-                        </tr>
-                        </table>
-                        <![endif]-->
+                    <td style="padding: 20px; text-align: center;">
+                        <p class="mono" style="margin: 0; font-size: 10px; color: #9ca3af;">
+                            SERVER_ID: TCHIIZ_MAIN | PID: {{ request.META.process_id|default:"N/A" }}
+                        </p>
                     </td>
                 </tr>
             </table>
-            <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
-        </td>
-    </tr>
-</table>
-<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
-    <tr>
-        <td align="center">
-            <a href="https://www.instagram.com/crueltouch_/" target="_blank">
-                <img src="https://img.icons8.com/office/30/000000/instagram-new.png"/>
-            </a>
-        </td>
-    </tr>
-</table>
-<!-- LITMUS ATTRIBUTION -->
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-    <tr>
-        <td bgcolor="#ffffff" align="center">
-            <!--[if (gte mso 9)|(IE)]>
-            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
-                <tr>
-                    <td align="center" valign="top" width="600">
-            <![endif]-->
-            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                <tr>
-                    <td bgcolor="#ffffff" align="center"
-                        style="padding: 30px 30px 30px 30px; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                        <p style="margin: 0;">Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                            All rights reserved | <a href="https://tchiiz.com" target="_blank"
-                                                     style="text-decoration: none">TCHIIZ Studio</a> </p>
-                    </td>
-                </tr>
-            </table>
-            <!--[if (gte mso 9)|(IE)]>
-            </td>
-            </tr>
-            </table>
-            <![endif]-->
-        </td>
-    </tr>
-</table>
-<!-- END LITMUS ATTRIBUTION -->
+
+        </div>
+        </center>
 </body>
 </html>
